# fn

./: README.md  circle.yml  fn.cabal  stack-12.11.yaml  stack-15.1.yaml  stack-7.10.yaml  stack-7.8.yaml  stack-8.15.yaml  stack.yaml
.circleci/: config.yml
example/: Main.hs  Makefile  Site.hs  fn-example.cabal
example/src/: Main.hs  Site.hs
example/templates/: file.tpl  form.tpl  template.tpl
example/test/: Spec.hs
fn/: CHANGELOG.md  README.md  fn.cabal
fn-extra/: CHANGELOG.md  LICENSE  README.md  fn-extra.cabal
fn-extra/src/Web/Fn/Extra/: Digestive.hs  Heist.hs
fn/src/Web/: Fn.hs
fn/test/: Spec.hs
src/Web/: Fn.hs
test/: Spec.hs
