name:                fn-example
version:             0.1.0.0
synopsis:            An example application using fn.
description:         Please see README.
homepage:            http://github.com/dbp/fn#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson <dbp@dbpmail.net>
maintainer:          dbp@dbpmail.net
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fn-example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , fn
                     , warp
                     , wai
                     , wai-util
                     , lens
                     , text
                     , http-types
                     , heist
                     , either
                     , blaze-builder
                     , postgresql-simple
                     , resource-pool
                     , logging
                     , hedis
                     , wai-session
                     , wai-session-clientsession
                     , clientsession
                     , cereal-text
                     , vault
                     , data-default
                     , xmlhtml
                     , mtl
  default-language:    Haskell2010

test-suite fn-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  main-is:             Spec.hs
  build-depends:       base
                     , fn
                     , warp
                     , wai
                     , wai-util
                     , lens
                     , text
                     , http-types
                     , heist
                     , either
                     , blaze-builder
                     , postgresql-simple
                     , resource-pool
                     , logging
                     , hedis
                     , wai-session
                     , wai-session-clientsession
                     , clientsession
                     , cereal-text
                     , vault
                     , data-default
                     , xmlhtml
                     , mtl
                     , hspec
                     , hspec-wai
  default-language:    Haskell2010