name:                fn-example
version:             0.1.0.0
synopsis:            An example application using fn.
description:         Please see README.
homepage:            http://github.com/positiondev/fn#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson <dbp@dbpmail.net>
maintainer:          workers@positiondev.com
copyright:           2016 Position Development, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fn-example
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Site
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , fn
                     , fn-extra
                     , warp
                     , wai
                     , http-types
                     , lens
                     , text
                     , heist
                     , digestive-functors
                     , digestive-functors-heist
                     , postgresql-simple
                     , resource-pool
                     , logging
                     , hedis
                     , wai-session
                     , wai-session-clientsession
                     , clientsession
                     , cereal-text
                     , vault
                     , data-default
                     , xmlhtml
                     , mtl
                     , larceny
  default-language:    Haskell2010

test-suite fn-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  main-is:             Spec.hs
  other-modules:       Site
  build-depends:       base
                     , fn
                     , fn-extra
                     , warp
                     , wai
                     , http-types
                     , lens
                     , text
                     , heist
                     , digestive-functors
                     , digestive-functors-heist
                     , postgresql-simple
                     , resource-pool
                     , logging
                     , hedis
                     , wai-session
                     , wai-session-clientsession
                     , clientsession
                     , cereal-text
                     , vault
                     , data-default
                     , xmlhtml
                     , mtl
                     , hspec
                     , hspec-wai
                     , larceny
  default-language:    Haskell2010