name:                fn-extra
version:             0.3.0.0
synopsis:            Extras for Fn, a functional web framework.
description:         Please see README.
homepage:            http://github.com/dbp/fn#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson <dbp@dbpmail.net>
maintainer:          Daniel Patterson <dbp@dbpmail.net>
copyright:           2016 Daniel Patterson
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Fn.Extra.Heist
                     , Web.Fn.Extra.Digestive
  build-depends:       base >= 4.7 && < 5
                     , heist
                     , xmlhtml
                     , http-types
                     , wai
                     , wai-util
                     , wai-extra
                     , resourcet
                     , mtl
                     , text
                     , blaze-builder
                     , bytestring
                     , lens
                     , directory
                     , either
                     , digestive-functors
                     , fn
  default-language:    Haskell2010
  ghc-options:         -Wall


source-repository head
  type:     git
  location: https://github.com/dbp/fn-extra
