name:                fn
version:             0.1.4.0
synopsis:            A functional web framework.
description:         Please see README.
homepage:            http://github.com/dbp/fn#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson <dbp@dbpmail.net>
maintainer:          dbp@dbpmail.net
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Fn
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , http-types
                     , text
                     , blaze-builder
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite fn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fn
                     , hspec
                     , text
                     , http-types
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/fn
